refactors validation
