# docs/swagger.json
@@ -39,16 +39,18 @@
                     {
                         "type": "integer",
                         "default": 10,
-                        "description": "Количество записей на странице",
+                        "description": "Количество записей на странице (максимум 100)",
                         "name": "size",
-                        "in": "query"
+                        "in": "query",
+                        "required": true
                     },
                     {
                         "type": "integer",
                         "default": 1,
                         "description": "Страница (начиная с 1)",
                         "name": "page",
-                        "in": "query"
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -336,6 +338,12 @@
             "properties": {
                 "error": {
                     "type": "string"
+                },
+                "errors": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.ValidationError"
+                    }
                 }
             }
         },
@@ -364,7 +372,8 @@
                     "minimum": 0
                 },
                 "service_name": {
-                    "type": "string"
+                    "type": "string",
+                    "minLength": 2
                 },
                 "start_date": {
                     "type": "string"
@@ -443,9 +452,21 @@
                     "minimum": 0
                 },
                 "service_name": {
-                    "type": "string"
+                    "type": "string",
+                    "minLength": 2
                 },
                 "start_date": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.ValidationError": {
+            "type": "object",
+            "properties": {
+                "field": {
+                    "type": "string"
+                },
+                "message": {
                     "type": "string"
                 }
             }
